test/classes/delete-free/error-within-begin-block.good
error-within-begin-block.chpl:3: In function 'test':
error-within-begin-block.chpl:7: error: Scoped variable bb would outlive the value it is set to
error-within-begin-block.chpl:6: note: consider scope of a
error-within-begin-block.chpl:7: error: Scoped variable bb reachable after lifetime ends
error-within-begin-block.chpl:6: note: consider scope of a
